[package]
name = "remote-file-monitor-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
openssh = "0.10.3"
async-io = "2.3.1"
axum = { version = "0.7.5", features = ["macros"] }
tower-http = { version = "0.5.0", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
